# rdk-cobalt

./: CONTRIBUTING.md  NOTICE
plugin/: CMakeLists.txt  Cobalt.config  Cobalt.cpp  Cobalt.h  CobaltImplementation.cpp  CobaltJsonRpc.cpp  CobaltPlugin.json  Module.h
plugin/doc/: CobaltPlugin.md
plugin/interfaces/json/: Accessibility.json  Cobalt.json  StateControl.json
wsrpc/: CMakeLists.txt  README.md  cobalt_rpc_event_callback.h  cobalt_rpc_ws.cc  cobalt_rpc_ws.h  cobalt_rpc_ws_server.h  libcobalt.h  logging.h  main.cc
wsrpc/docs/: .gitignore  GenerateDocs.sh  cobalt-wsrpc.json  cobalt-wsrpcAPI.md
wsrpc/docs/patch/: 0001-Simplified-docs-generation.patch
